--- a/res/layout-w600dp-port/project_layout.xml
+++ b/res/layout-w600dp-port/project_layout.xml
@@ -64,16 +64,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="11dip"
-            android:layout_marginLeft="93dip"
+            android:layout_marginTop="18dip"
+            android:layout_centerHorizontal="true"
             android:src="@drawable/btn_playback_ic_prev"
             android:background="@drawable/background_selector"/>
         <ImageButton android:id="@+id/editor_rewind"
             android:onClick="onClickHandler"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="90dip"
-            android:layout_marginLeft="14dip"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="18dip"
             android:src="@drawable/btn_playback_ic_rev"
             android:background="@drawable/background_selector"/>
         <ImageButton android:id="@+id/editor_play"
@@ -81,9 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginLeft="3dip"
-            android:layout_marginTop="1dip"
-            android:layout_below="@id/editor_prev"
+            android:layout_centerVertical="true"
             android:src="@drawable/btn_playback_ic_play"
             android:background="@drawable/background_selector"/>
         <ImageButton android:id="@+id/editor_next"
@@ -91,8 +89,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginLeft="93dip"
-            android:layout_marginBottom="11dip"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="18dip"
             android:src="@drawable/btn_playback_ic_next"
             android:background="@drawable/background_selector"/>
     </RelativeLayout>
